--- a/css/tempusdominus-bootstrap-4.css
+++ b/css/tempusdominus-bootstrap-4.css
@@ -119,6 +119,7 @@
     .bootstrap-datetimepicker-widget table th {
       height: 20px;
       line-height: 20px;
+	  color:#fff;
       width: 20px; }
       .bootstrap-datetimepicker-widget table th.picker-switch {
         width: 145px; }
@@ -177,7 +178,7 @@
           bottom: 4px;
           right: 4px; }
       .bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
-        background-color: #007bff;
+        background-color: #849c23 !important;
         color: #fff;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
       .bootstrap-datetimepicker-widget table td.active.today:before {
