--- a/css/default.css
+++ b/css/default.css
@@ -21,6 +21,8 @@ pre {overflow-x:scroll; font-size:1.1em}
 ul,li,dl,dt,dd {padding:0;margin:0}
 ul {list-style:none}
 
+body .txt_clear:active{position:absolute; width:18px; height:18px; top:8px; right:0px; text-indent:-9999px; background: url('../images/common_ico.png')no-repeat; background-size: 300px; padding-right:0; background-position: -268px -88px; box-shadow:none;}
+
 .txt_clear{position:absolute; width:18px; height:18px; top:8px; right:0px; text-indent:-9999px; background: url('../images/common_ico.png')no-repeat; background-size: 300px; padding-right:0; background-position: -268px -88px;}
 button.common_btn{position:relative; background:#fff; border:1px solid #849c23; color:#849c23; width:100%; font-weight:400; margin:10px 0; font-size:1.2em; margin:10px 0 0 0;}
 
@@ -94,7 +96,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #content .adm_modify p.modify_btn a{width:100%; font-weight:500; color:#333; display:block;}
 #content .adm_modify p.modify_btn a:before{position:absolute; content:'\f105'; font-family:'FontAwesome'; font-size:1.0em; color:#333; right:25px;}
 
-#content .commute_info {background:#f9f9f9;}
+#content .work .commute_info {background:#f9f9f9; border-bottom:none;}
 #content .commute_info .current_time p.in_time:before{background-position: -156px -68px; background-size:250px;}
 #content .commute_info .current_time p.out_time:before{background-position: -190px -68px; background-size:250px;}
 #content .commute_info .total_time p.current_txt:before{background-position: -85px -68px; background-size:250px;}
@@ -136,16 +138,16 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 
 #sub_content #month_pick{border:none; font-size:1.4em; color:#333;}
 
-#footer{background:#e9e9e9; width:100%; max-width:768px; position:fixed; bottom:0;}
+#footer{background:#fff; width:100%; max-width:768px; position:fixed; bottom:0; box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.08);}
 #footer .footer_menu ul:after{display:block; content:''; clear:both;}
 #footer .footer_menu ul li{float:left; width:50%; text-align:center;}
-#footer .footer_menu ul li:first-child{border-right:1px solid #d9d9d9;}
+#footer .footer_menu ul li:first-child{/* border-right:1px solid #d9d9d9; */}
 #footer .footer_menu ul li a{color:#333; width:100%; font-size:1.4em; position:relative; padding:10px 0; display:block;}
 #footer .footer_menu ul li a span{background:url('../images/common_ico.png')no-repeat; width:25px; height:25px; background-size:200px; text-indent:-9999px; margin:0 auto; display:block; margin-bottom:5px;}
 #footer .footer_menu ul li a span.home_img{background-position:-13px -83px;}
 #footer .footer_menu ul li a span.report_img{background-position:-47px -83px;}
 
-#footer .footer_menu ul li.on a{color:#849c23; background:#d9d9d9;}
+#footer .footer_menu ul li.on a{color:#849c23; /* background:#d9d9d9; */}
 #footer .footer_menu ul li.on a span.home_img{background-position:-13px -122px;}
 #footer .footer_menu ul li.on a span.report_img{background-position:-47px -122px;}
 
@@ -161,7 +163,8 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 .m_work .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
-body .modal input:focus{border-bottom:1px solid #849c23 !important;}
+body .modal input[type="text"]:focus{border-bottom:1px solid #849c23 !important;}
+body .modal input[type="file"]{border-bottom:none !important;}
 body .modal textarea:focus{border:1px solid #849c23 !important;}
 body .modal .modal-backdrop{height:100% !Important;}
 
@@ -193,7 +196,18 @@ body .modal .modal-backdrop{height:100% !Important;}
 #mon_modify .now_info .now p.txt_right{float:right; text-align:right; line-height:1.1em;}
 #mon_modify .now_info .now p.txt_right span.modal_time{font-size:0.8em; color:#bbbbbb; font-weight:400;}
 
-#mon_modify .work_form h2{color:#849c23; padding-bottom:20px;}
+
+
+#mon_modify .work_form h2{color:#849c23; padding:20px 0 10px 0; font-size:1.5em;}
+#mon_modify .work_form .work_modify table{width:100%;}
+#mon_modify .work_form .work_modify table tr td{font-size:1.2em; position:relative; padding-bottom:10px;}
+#mon_modify .work_form .work_modify table tr td.form{vertical-align:top; padding-top:5px;}
+#mon_modify .work_form .work_modify table tr td label{color:#333; font-size:1.0em; font-weight:400; vertical-align:middle; padding-left:0;}
+#mon_modify .work_form table tr td input{border:0; border-bottom:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
+#mon_modify .work_form table tr td textarea{border-radius:0; border-bottom:1px solid #d9d9d9; box-shadow:none;}
+#mon_modify .work_form table tr td span.invalid{text-align:left; display:none; font-size:0.9em; color:#ff0000; margin-top:5px; font-weight:400;}
+
+/*
 #mon_modify .work_form .label_list:after{display:block; content:''; clear:both;}
 #mon_modify .work_form p label{color:#333; display:inline-block; font-size:1.4em; font-weight:400; padding:0;}
 #mon_modify .work_form input{border:0; border-bottom:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
@@ -209,6 +223,7 @@ body .modal .modal-backdrop{height:100% !Important;}
 #mon_modify .work_form h2{font-size:1.5em;}
 
 #mon_modify .work_form .label_list .bootstrap-datetimepicker-widget{position:absolute; bottom:0;}
+*/
 
 #mon_modify .modal-footer{padding:0; position:fixed; bottom:0; overflow:hidden; text-align:center; width:100%; max-width:768px; left:0; right:0; margin:0 auto;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
