--- a/css/default.css
+++ b/css/default.css
@@ -176,7 +176,7 @@ body .modal .modal-backdrop{height:100% !Important;}
 /*
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
 */
-#mon_modify .modal-dialog{height:100%; margin:0;}
+#mon_modify .modal-dialog{width:100%; height:100%; margin:0;}
 
 #mon_modify .modal-content{max-width:100%; width:100%; border-radius:0; border:none; box-shadow:none; height:100%; margin:0 auto;}
 #mon_modify .modal-header{border-bottom:1px solid #849c23;}
