--- a/css/default.css
+++ b/css/default.css
@@ -172,7 +172,7 @@ body .modal .modal-backdrop{height:100% !Important;}
 
 #mon_modify{padding:0 !important; max-width:100%; width:100%; background:#fff; margin:0 auto;}
 #mon_modify.in{overflow-y:scroll;}
-#mon_modify .modal-body{background:#fff; /* margin-bottom:50px; */ height:100%;}
+#mon_modify .modal-body{background:#fff; /* margin-bottom:50px; height:100%;*/ }
 /*
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
 */
@@ -229,8 +229,13 @@ body .modal .modal-backdrop{height:100% !Important;}
 #mon_modify .work_form .label_list .bootstrap-datetimepicker-widget{position:absolute; bottom:0;}
 */
 
-#mon_modify .modal-footer{padding:0; position:absolute; overflow:hidden; text-align:center; width:100%; max-width:100%; left:0; right:0; margin:0 auto;}
+#mon_modify .modal-footer{padding:0; position:absolute; overflow:hidden; text-align:center; width:100%; max-width:100%; left:0; right:0; margin:0 auto; bottom:0;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
+
+@media (max-width: 320px) {
+	#mon_modify .modal-footer{position:relative; bottom:0;}
+}
+
 
 
 .work_time .modal-content{border:none; border-radius:0;}
@@ -284,7 +289,7 @@ body .month-picker-month-table tr td a.ui-state-highlight{background:#fff; borde
 .MultiFile-list div.MultiFile-label > span .MultiFile-label:after{display:block; content:''; clear:both;}
 .MultiFile-list div.MultiFile-label > span .MultiFile-label{display:inline-block; width:100%;}
 .MultiFile-list div.MultiFile-label > span .MultiFile-title{display:block; font-size:0.9em; color:#333; font-weight:400; text-align:center; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; max-width:113px; margin:0 auto;}
-div.MultiFile-label{width:50%; display:table-cell; height:120px; position:relative; text-align:center;}
+div.MultiFile-label{width:50%; display:table-cell; height:80px; position:relative; text-align:center;}
 .MultiFile-list div.MultiFile-label > span .MultiFile-size{color:#ff0000; font-weight:400; padding-left:5px;}
 div.MultiFile-label .MultiFile-remove{position:absolute; left:5px; top:5px;}
 div.MultiFile-label .MultiFile-remove .file_clear{text-indent:-9999px;}
