--- a/css/default.css
+++ b/css/default.css
@@ -172,7 +172,7 @@ body .modal .modal-backdrop{height:100% !Important;}
 
 #mon_modify{padding:0 !important; max-width:100%; width:100%; background:#fff; margin:0 auto;}
 #mon_modify.in{overflow-y:scroll;}
-#mon_modify .modal-body{background:#fff; /* margin-bottom:50px; height:100%;*/ }
+#mon_modify .modal-body{background:#fff; /* margin-bottom:50px; */ height:100%; }
 /*
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
 */
@@ -229,7 +229,7 @@ body .modal .modal-backdrop{height:100% !Important;}
 #mon_modify .work_form .label_list .bootstrap-datetimepicker-widget{position:absolute; bottom:0;}
 */
 
-#mon_modify .modal-footer{padding:0; position:absolute; overflow:hidden; text-align:center; width:100%; max-width:100%; left:0; right:0; margin:0 auto; bottom:0;}
+#mon_modify .modal-footer{padding:0; position:relative; overflow:hidden; text-align:center; width:100%; max-width:100%; left:0; right:0; margin:0 auto; bottom:0;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 @media (max-width: 320px) {
